--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -3,7 +3,8 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .soundcloud {
+  margin-top: 20px;
   iframe {
-    height: 100px;
+    height: 80px;
   }
 }
