--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -7,7 +7,7 @@
       <h3><%= @concert.show_date %>, <%= @concert.show_time.strftime("%l:%M %P") %></h3>
     </div>
     <div class="col-md-6">
-      <h3><%= @concert.title %> <small>by</small> <%= @concert.user.username %></h3>
+      <h3><%= @concert.title %> <small>by</small> <%= link_to @concert.user.username, [@concert.user, @concert.user.profiles.first] %></h3>
     </div>
   </div>
   <div class="col-md-5">
