--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,15 +50,16 @@
             <% if user_signed_in? %>
               <% if user_profile && user_profile.avatar? %>
                 <%= image_tag(user_profile.avatar.sm.url, id: 'photo') %>
+              <% else %>
+                <%= image_tag("/fallback/default_sm.png", id: 'photo') %>
               <% end %>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.username %> <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><%= link_to 'Saved Music', '#' %></li>
                   <li role="separator" class="divider"></li>
-                  <li><%= link_to 'My Songs', '#' %></li>
                   <% if user_profile && user_profile.id %>
-                    <li><%= link_to 'My Musician Profile', edit_user_profile_path(current_user, user_profile) %></li>
+                    <li><%= link_to 'My Musician Profile', [current_user, user_profile] %></li>
                   <% else %>
                     <li><%= link_to 'New Musician Profile', new_user_profile_path(current_user) %></li>
                   <% end %>
