--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -10,19 +10,31 @@
     </div>
   <% end %>
 
-  <h3>Profile Photo</h3>
-  <% if @profile.avatar? %>
-    <%= image_tag(@profile.avatar.md.url) %>
-    <%= link_to "Remove Current Photo", user_remove_avatar_path(current_user), method: :delete %>
-  <% end %>
-
-  <div class="form-group">
-    <%= f.label :avatar, class: 'sr-only' %>
-    <%= f.file_field :avatar, class: 'form-control', id: 'img-file' %>
-    <%= f.hidden_field :avatar_cache %>
-  </div>
-  <div class="upload-preview">
-    <img />
+  <h3 class="space-top">Profile Photo</h3>
+  <div class="row">
+    <div class="col-md-4">
+      <h5>Current Photo</h5>
+      <% if @profile.avatar? %>
+        <%= image_tag(@profile.avatar.md.url) %>
+        <p><%= link_to "Remove Current Photo", user_remove_avatar_path(current_user), method: :delete %></p>
+      <% else %>
+        <%= image_tag("/fallback/default_md.png") %>
+      <% end %>
+    </div>
+    <div class="col-md-5">
+      <h5>Upload New Photo</h5>
+      <div class="form-group">
+        <%= f.label :avatar, class: 'sr-only' %>
+        <%= f.file_field :avatar, class: 'form-control', id: 'img-file' %>
+        <%= f.hidden_field :avatar_cache %>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <h5>Preview</h5>
+      <div class="upload-preview">
+        <img />
+      </div>
+    </div>
   </div>
 
   <h3 class="space-top">Social Media</h3>
