--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -19,6 +19,6 @@
       <% end %>
     </table>
 
-    <%= render partial: 'concerts/list', locals: { concerts: @tag.concerts } %>
+    <%= render partial: 'concerts/table', locals: { concerts: @tag.concerts } %>
   </div>
 </div>
