--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,15 +47,8 @@
 body > .container {
   margin-top: 20px;
 }
-h1, h2, h3 {
-    margin-top: 10.5px;
-    margin-bottom: 10.5px;
-}
 table, .table {
   font-size: 15px;
-}
-body {
-  font-size: 16px;
 }
 a, table a:not(.btn), .table a:not(.btn) {
   text-decoration: none;
@@ -77,8 +70,14 @@ a:hover, a:focus, table a:not(.btn):hover, .table a:not(.btn):focus {
 .space-top {
   margin-top: 50px;
 }
+.space-top-sm {
+  margin-top: 30px;
+}
 .list-style-none {
   list-style: none;
+}
+.margin-left-xs {
+  margin-left: 5px;
 }
 .margin-left-sm {
   margin-left: 10px;
@@ -89,24 +88,21 @@ a:hover, a:focus, table a:not(.btn):hover, .table a:not(.btn):focus {
 
 
 // Global Style
+body {
+  font-size: 16px;
+}
 section {
   margin: 30px 0;
 }
 footer {
   margin: 50px auto;
 }
+h1, h2, h3 {
+  margin-top: 10.5px;
+  margin-bottom: 10.5px;
+}
 img {
   border-radius: 10px;
-}
-#user-profile {
-  .list-group {
-    margin-top: 50px;
-  }
-}
-.social-btn {
-  i {
-    padding-left: 10px;
-  }
 }
 .nav {
   #photo {
