--- a/app/assets/stylesheets/concerts.scss
+++ b/app/assets/stylesheets/concerts.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the concerts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+section#concert-show {
+  margin-top: 60px;
+}
+section#concert-show > .row {
+  margin-bottom: 8px;
+}
+#info-top {
+  border-top: 5px solid #5bc0de;
+  background-color: transparent;
+}
