--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -1,17 +1,31 @@
 <script src="//maps.google.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_API_KEY'] %>" type="text/javascript"></script>
 <script src="//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js"></script>
 
+<section id="concert-show">
 <div class="row">
-  <div class="row alert alert-info">
-    <div class="col-md-6">
-      <h3><%= @concert.show_date %>, <%= @concert.show_time.strftime("%l:%M %P") %></h3>
-    </div>
-    <div class="col-md-6">
-      <h3><%= @concert.title %> <small>by</small> <%= link_to @concert.user.username, [@concert.user, @concert.user.profiles.first] %></h3>
+  <div class="pull-right">
+    <% if current_user && current_user == @concert.user %>
+      <%= link_to edit_user_concert_path(@concert.user, @concert), class: 'btn-sm btn-success' do %>
+        <i class="fa fa-pencil-square-o fa-lg"></i> Edit
+      <% end %>
+      <%= link_to [@concert.user, @concert], method: :delete, class: 'btn-sm btn-danger margin-left-xs', data: { confirm: 'Are you sure to delete this concert information?' } do %>
+        <i class="fa fa-trash-o fa-lg"></i> Delete
+      <% end %>
+    <% end %>
+  </div>
+</div>
+<div class="row">
+  <div id="info-top">
+    <div class="col-md-8 col-md-offset-2 text-center">
+      <h3 class="space-top"><%= @concert.title %></h3>
+      <p><%= link_to @concert.user.username, [@concert.user, @concert.user.profiles.first] %></p>
+      <p class="lead"><%= @concert.show_date %>, <%= @concert.show_time.strftime("%l:%M %P") %></p>
     </div>
   </div>
+</div>
+<p><%= render partial: 'tags/list', locals: { tags: @concert.tags } %></p>
+<div class="row space-top-sm">
   <div class="col-md-5">
-    <%= render partial: 'tags/list', locals: { tags: @concert.tags } %>
     <h4>
       <%= @concert.location_name %>
       <% if url = @concert.location_url %>
@@ -32,15 +46,6 @@
   </div>
 </div>
 
-<div class="row space-top">
-  <div class="pull-right">
-    <% if current_user && current_user == @concert.user %>
-      <%= link_to 'Edit', edit_user_concert_path(@concert.user, @concert), class: 'btn btn-success' %>
-      <%= link_to 'Delete', [@concert.user, @concert], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure to delete this concert information?' } %>
-    <% end %>
-  </div>
-</div>
-
 <script type="text/javascript">
   handler = Gmaps.build('Google');
   handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
@@ -49,3 +54,4 @@
     handler.fitMapToBounds();
   });
 </script>
+</section>
