--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="row" id="user-profile">
+<div class="row" id="user-sidebar">
   <div class="col-md-4">
     <div class="list-group">
       <%= link_to 'Saved Music', '#', class: "list-group-item" %>
@@ -27,7 +27,7 @@
       <%= render 'form' %>
     </div>
 
-    <div class="row">
+    <div class="row space-top">
       <%= render partial: 'concerts/list', locals: { profile: @profile, concerts: current_user.concerts } %>
     </div>
   </div> <!-- /.col-md-8 -->
