--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,4 +1,4 @@
-<div class="row" id="user-profile">
+<div class="row" id="user-sidebar">
   <div class="col-md-3">
     <div class="list-group">
       <%= link_to 'Saved Music', '#', class: "list-group-item" %>
