--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -3,24 +3,13 @@
     <div class="list-group">
       <%= link_to 'Saved Music', '#', class: "list-group-item" %>
       <%= link_to 'My Songs', '#', class: "list-group-item" %>
-      <%= link_to 'My Musician Profile', edit_user_profile_path(current_user, @profile), class: "list-group-item active" %>
+      <%= link_to 'My Musician Profile', edit_user_profile_path(@profile.user, @profile), class: "list-group-item active" %>
     </div> <!-- /.list-group -->
   </div> <!-- /.col-md-5 -->
 
   <div class="col-md-8">
     <div class="row">
-      <h3>Basic Profile</h3>
-      <table class="table">
-        <tr>
-          <th>Username</th>
-          <td><%= current_user.username %></td>
-        </tr>
-        <tr>
-          <th>Email</th>
-          <td><%= current_user.email %></td>
-        </tr>
-      </table>
-      <%= link_to 'Edit', edit_user_registration_path, class: 'btn btn-primary pull-right' %>
+      <%= render partial: 'user_basic', locals: { user: @profile.user } %>
     </div>
 
     <div class="row">
@@ -28,7 +17,7 @@
     </div>
 
     <div class="row space-top">
-      <%= render partial: 'concerts/list', locals: { profile: @profile, concerts: current_user.concerts } %>
+      <%= render partial: 'concerts/list', locals: { profile: @profile, concerts: @profile.user.concerts } %>
     </div>
   </div> <!-- /.col-md-8 -->
 </div>
