--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -3,24 +3,13 @@
     <div class="list-group">
       <%= link_to 'Saved Music', '#', class: "list-group-item" %>
       <%= link_to 'My Songs', '#', class: "list-group-item" %>
-      <%= link_to 'New Musician Profile', new_user_profile_path(current_user), class: "list-group-item active" %>
+      <%= link_to 'New Musician Profile', new_user_profile_path(@user), class: "list-group-item active" %>
     </div> <!-- /.list-group -->
   </div> <!-- /.col-md-5 -->
 
   <div class="col-md-8">
     <div class="row">
-      <h3>Basic Profile</h3>
-      <table class="table">
-        <tr>
-          <th>Username</th>
-          <td><%= current_user.username %></td>
-        </tr>
-        <tr>
-          <th>Email</th>
-          <td><%= current_user.email %></td>
-        </tr>
-      </table>
-      <%= link_to 'Edit', edit_user_registration_path, class: 'btn btn-primary pull-right' %>
+      <%= render partial: 'user_basic', locals: { user: @user } %>
     </div>
 
     <div class="row">
