--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -45,8 +45,8 @@
     <% if current_user.premium? %>
       <div class="row">
         <h3>Cancelation the premium service</h3>
-        <p>If you cancel your premium service, all your saved data will be deleted. Please back up first.</p>
-        <%= link_to "Cancel Premium", cancel_premium_path, method: :delete, class: 'btn btn-danger pull-right', data: { confirm: "If you cancel your premium service, all your saved data will be deleted. Do you still want to proceed?" } %>
+        <p>If you cancel your premium service, all your uploaded music will be permanently deleted. Please back up first.</p>
+        <%= link_to "Cancel Premium", cancel_premium_path, method: :delete, class: 'btn btn-danger pull-right', data: { confirm: "If you cancel your premium service, all your uploaded music will be permanently deleted. Do you still want to proceed?" } %>
       </div> <!-- /.row -->
     <% end %>
   </div> <!-- /.col-md-6 col-md-offset-3 -->
