--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,7 +54,7 @@
                 <%= image_tag("/fallback/default_sm.png", id: 'photo') %>
               <% end %>
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.username %> <span class="caret"></span></a>
+                <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.username %> <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><%= link_to 'Saved Music', '#' %></li>
                   <li role="separator" class="divider"></li>
@@ -62,6 +62,9 @@
                     <li><%= link_to 'My Musician Profile', [current_user, user_profile] %></li>
                   <% else %>
                     <li><%= link_to 'New Musician Profile', new_user_profile_path(current_user) %></li>
+                  <% end %>
+                  <% if premium_or_admin?(current_user) %>
+                    <li><%= link_to 'Upload My Music', user_songs_path(current_user), class: "list-group-item" %></li>
                   <% end %>
                   <li role="separator" class="divider"></li>
                   <li><%= link_to 'Login Settings', edit_user_registration_path %></li>
