--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -2,8 +2,10 @@
   <div class="col-md-4">
     <div class="list-group">
       <%= link_to 'Saved Music', '#', class: "list-group-item" %>
-      <%= link_to 'My Songs', '#', class: "list-group-item" %>
-      <%= link_to 'My Musician Profile', edit_user_profile_path(@profile.user, @profile), class: "list-group-item active" %>
+      <% if premium_or_admin?(@user) %>
+        <%= link_to 'Upload My Music', user_songs_path(@user), class: "list-group-item" %>
+      <% end %>
+      <%= link_to 'My Musician Profile', user_profile_path(@profile.user, @profile), class: "list-group-item active" %>
     </div> <!-- /.list-group -->
   </div> <!-- /.col-md-5 -->
 
