--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,2 +1,30 @@
-<h1>Songs#index</h1>
-<p>Find me in app/views/songs/index.html.erb</p>
+<section>
+  <div id="user-sidebar" class="row">
+    <div class="col-md-4">
+      <div class="list-group">
+        <%= link_to 'Saved Music', '#', class: "list-group-item" %>
+        <% if premium_or_admin?(@user) %>
+          <%= link_to 'Upload My Music', user_songs_path(@user), class: "list-group-item active" %>
+        <% end %>
+        <% if @user.profiles.blank? %>
+          <%= link_to 'New Musician Profile', new_user_profile_path(@user), class: "list-group-item" %>
+        <% else %>
+          <%= link_to 'My Musician Profile', user_profile_path(@user, @user.profiles.first), class: "list-group-item" %>
+        <% end %>
+      </div> <!-- /.list-group -->
+    </div> <!-- /.col-md-4 -->
+
+    <div class="col-md-8">
+      <h3 class="inlined">Song List</h3>
+      <% if premium_or_admin?(@user) %>
+        <%= link_to new_user_song_path(@user), class: 'btn-sm btn-primary margin-left-xs' do %>
+          <i class="fa fa-plus"></i> Add
+        <% end %>
+      <% end %>
+
+      <div class="space-top-sm">
+        <%= render 'list', { songs: @songs } %>
+      </div>
+    </div> <!-- /.col-md-8 -->
+  </div>
+</section>
