--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,2 +1,25 @@
-<h1>Songs#new</h1>
-<p>Find me in app/views/songs/new.html.erb</p>
+<section>
+  <div class="row" id="user-sidebar">
+    <div class="col-md-4">
+      <div class="list-group">
+        <%= link_to 'Saved Music', '#', class: "list-group-item" %>
+        <% if premium_or_admin?(@user) %>
+          <%= link_to 'Upload My Music', user_songs_path(@user), class: "list-group-item active" %>
+        <% end %>
+        <% if @user.profiles.blank? %>
+          <%= link_to 'New Musician Profile', new_user_profile_path(@user), class: "list-group-item" %>
+        <% else %>
+          <%= link_to 'My Musician Profile', user_profile_path(@user, @user.profiles.first), class: "list-group-item" %>
+        <% end %>
+      </div> <!-- /.list-group -->
+    </div> <!-- /.col-md-4 -->
+
+    <div class="col-md-8">
+      <div class="row">
+        <h3 class="space-top">Add Song</h3>
+        <p>Upload your favorite songs from Soundcloud.</p>
+        <%= render 'form' %>
+      </div>
+    </div> <!-- /.col-md-8 -->
+  </div>
+</section>
