ch14-title-and-seeds: added title, created seeds, modified genre&tag

--- a/app/views/genres/_list.html.erb
+++ b/app/views/genres/_list.html.erb
@@ -4,7 +4,7 @@
     <span class="margin-left-sm"><%= link_to 'Add', new_genre_path %></span>
   <% end %>
   <p>
-    <% Genre.all.each do |genre| %>
+    <% visibile_genres.each do |genre| %>
       <%= link_to genre.name, genre, class: 'btn-sm btn-primary' %>
     <% end %>
   </p>
