--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -1,3 +1,4 @@
+<% @title = "#{current_user.username} | Premium" %>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <div class="page-header">
