--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -1,6 +1,7 @@
 <script src="//maps.google.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_API_KEY'] %>" type="text/javascript"></script>
 <script src="//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js"></script>
 
+<% @title = "#{@user.username} | #{@concert.title}" %>
 <section id="concert-show">
 <div class="row">
   <div class="pull-right">
