--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,3 +1,4 @@
+<% @title = "#{@user.username} | Profile" %>
 <div class="container">
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
