ch15-add-genre-to-concerts: completed

--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -23,5 +23,7 @@
         </tr>
       <% end %>
     </table>
+
+    <%= render partial: 'concerts/table', locals: { concerts: @genre.concerts } %>
   </div>
 </div>
