--- a/app/views/concerts/_form.html.erb
+++ b/app/views/concerts/_form.html.erb
@@ -1,95 +1,115 @@
-<%= form_for [@user, @concert] do |f| %>
-  <% if @concert.errors.any? %>
-    <div id="error_explanation" class="alert alert-danger">
-      <h4><%= pluralize(@concert.errors.count, "error") %> prohibited this concert from being saved:</h4>
-      <ul>
-        <% @concert.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
+<div class="row">
+  <%= form_for [@user, @concert] do |f| %>
+    <% if @concert.errors.any? %>
+      <div id="error_explanation" class="alert alert-danger">
+        <h4><%= pluralize(@concert.errors.count, "error") %> prohibited this concert from being saved:</h4>
+        <ul>
+          <% @concert.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <!-- Concert Section -->
+    <div class="col-md-6">
+      <h4>Concert</h4>
+      <div class="form-group">
+        <%= f.label :title, "Concert Title *" %>
+        <%= f.text_field :title, class: 'form-control' %>
+      </div>
+
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <%= f.label :show_date, "Concert Date *" %>
+            <%= f.date_field :show_date, class: 'form-control' %>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="form-group">
+            <%= f.label :show_time, "Concert Time *" %>
+            <%= f.time_field :show_time, class: 'form-control' %>
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :body, "About Concert" %>
+        <%= f.text_area :body, rows: 4, class: 'form-control' %>
+      </div>
+
+      <h4>Genre &amp; Labels</h4>
+      <div class="row">
+        <div class="col-md-3">
+          <div class="form-group">
+            <%= f.label :genre_id, 'Genre *' %>
+            <%= select_tag 'concert[genre_id]', options_for_select(genre_list, @concert.genre_id), class: 'form-control' %>
+          </div>
+        </div>
+        <div class="col-md-9">
+          <%= render partial: 'tags/form', locals: { f: f, tags: @concert.tags } %>
+        </div>
+      </div>
+    </div> <!-- End Concert Section -->
+
+    <!-- Venue Section -->
+    <div class="col-md-6">
+      <h4>Venue</h4>
+      <div class="form-group">
+        <%= f.label :location_name, "Name of Venue *" %>
+        <%= f.text_field :location_name, class: 'form-control', placeholder: 'eg) Concert hall name, restaurant name, bar name, etc' %>
+      </div>
+      <div class="form-group">
+        <%= f.label :address_1, "Address 1 *" %>
+        <%= f.text_field :address_1, class: 'form-control' %>
+      </div>
+      <div class="form-group">
+        <%= f.label :address_2 %>
+        <%= f.text_field :address_2, class: 'form-control' %>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4">
+          <div class="form-group">
+            <%= f.label :city, "City *" %>
+            <%= f.text_field :city, class: 'form-control' %>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="form-group">
+            <%= f.label :state, "State *" %>
+            <%= select_tag 'concert[state]', options_for_select(us_states, @concert.state), class: 'form-control' %>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="form-group">
+            <%= f.label :zipcode, "Zip Code" %>
+            <%= f.text_field :zipcode, class: 'form-control' %>
+          </div>
+        </div>
+      </div> <!-- /.row -->
+
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <%= f.label :phone_number %>
+            <%= f.telephone_field :phone_number, class: 'form-control', placeholder: 'eg) 3120001234' %>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="form-group">
+            <%= f.label :location_url, "Location URL" %>
+            <%= f.url_field :location_url, class: 'form-control', placeholder: "http://www.example.com" %>
+          </div>
+        </div>
+      </div> <!-- /.row -->
+    </div> <!-- End Venue Section -->
+
+    <div class="pull-right">
+      <%= button_tag class: 'btn btn-success' do %>
+        <span class="glyphicon glyphicon-ok"></span> Save
+      <% end %>
     </div>
   <% end %>
-
-  <h4>Concert</h4>
-  <div class="form-group">
-    <%= f.label :title, "Concert Title *" %>
-    <%= f.text_field :title, class: 'form-control' %>
-  </div>
-  <div class="row">
-    <div class="col-md-6">
-      <div class="form-group">
-        <%= f.label :show_date, "Concert Date *" %>
-        <%= f.date_field :show_date, class: 'form-control' %>
-      </div>
-    </div>
-    <div class="col-md-6">
-      <div class="form-group">
-        <%= f.label :show_time, "Concert Time *" %>
-        <%= f.time_field :show_time, class: 'form-control' %>
-      </div>
-    </div>
-  </div>
-
-  <h4>Venue</h4>
-  <div class="form-group">
-    <%= f.label :location_name, "Name of Venue *" %>
-    <%= f.text_field :location_name, class: 'form-control', placeholder: 'eg) Concert hall name, restaurant name, bar name, etc' %>
-  </div>
-  <div class="form-group">
-    <%= f.label :address_1, "Address 1 *" %>
-    <%= f.text_field :address_1, class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= f.label :address_2 %>
-    <%= f.text_field :address_2, class: 'form-control' %>
-  </div>
-
-  <div class="row">
-    <div class="col-md-4">
-      <div class="form-group">
-        <%= f.label :city, "City *" %>
-        <%= f.text_field :city, class: 'form-control' %>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="form-group">
-        <%= f.label :state, "State *" %>
-        <%= select_tag 'concert[state]', options_for_select(us_states, @concert.state), class: 'form-control' %>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="form-group">
-        <%= f.label :zipcode, "Zip Code" %>
-        <%= f.text_field :zipcode, class: 'form-control' %>
-      </div>
-    </div>
-  </div> <!-- /.row -->
-
-  <div class="row">
-    <div class="col-md-6">
-      <div class="form-group">
-        <%= f.label :phone_number %>
-        <%= f.telephone_field :phone_number, class: 'form-control', placeholder: 'eg) 3120001234' %>
-      </div>
-    </div>
-    <div class="col-md-6">
-      <div class="form-group">
-        <%= f.label :location_url, "Location URL" %>
-        <%= f.url_field :location_url, class: 'form-control', placeholder: "http://www.example.com" %>
-      </div>
-    </div>
-  </div> <!-- /.row -->
-
-  <div class="form-group">
-    <%= f.label :body, "About Concert" %>
-    <%= f.text_area :body, rows: 4, class: 'form-control' %>
-  </div>
-
-  <%= render partial: 'tags/form', locals: { f: f, tags: @concert.tags } %>
-
-  <div class="pull-right">
-    <%= button_tag class: 'btn btn-success' do %>
-      <span class="glyphicon glyphicon-ok"></span> Save
-    <% end %>
-  </div>
-<% end %>
+</div>
