--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -24,7 +24,10 @@
     </div>
   </div>
 </div>
-<p><%= render partial: 'tags/list', locals: { tags: @concert.tags } %></p>
+<p>
+  <%= link_to @concert.genre.name, @concert.genre, class: 'btn-sm btn-primary' %>
+  <%= render partial: 'tags/list', locals: { tags: @concert.tags } %>
+</p>
 <div class="row space-top-sm">
   <div class="col-md-5">
     <h4>
