ch16-musicians-concerts-tab: edited concert_form, created tabs

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,11 @@
 
 @import 'font-awesome';
 
+// Override font-awesome
+.fa {
+  margin-right: 7px;
+}
+
 // Override bootstrap
 .icon-bar {
   background-color: #DF691A;
