--- a/app/views/concerts/_table.html.erb
+++ b/app/views/concerts/_table.html.erb
@@ -8,7 +8,7 @@
 
   <% concerts.each do |concert| %>
     <tr>
-      <td><%= concert.show_date %>, <%= concert.show_time.strftime("%l:%M %P") %></td>
+      <td><%= concert.show_date.strftime("%D") %>, <%= concert.show_time.strftime("%l:%M %P") %></td>
       <td><%= link_to concert.title, [concert.user, concert] %></td>
       <td><%= concert.location_name %> <small>(<%= concert.city %> <%= concert.state %></small>)</td>
       <% if user_is_authorized?(concert) %>
