--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -20,7 +20,7 @@
     <div class="col-md-8 col-md-offset-2 text-center">
       <h3 class="space-top"><%= @concert.title %></h3>
       <p><%= link_to @concert.user.username, [@concert.user, @concert.user.profiles.first] %></p>
-      <p class="lead"><%= @concert.show_date %>, <%= @concert.show_time.strftime("%l:%M %P") %></p>
+      <p class="lead"><%= @concert.show_date.strftime("%B %e %Y") %>, <%= @concert.show_time.strftime("%l:%M %P") %></p>
     </div>
   </div>
 </div>
