ch17-favorite-profile: completed

--- a/app/views/concerts/_list.html.erb
+++ b/app/views/concerts/_list.html.erb
@@ -1,7 +1,7 @@
 <h3 class="inlined">Concerts Schedule</h3>
 <% if user_is_authorized?(profile) %>
-  <%= link_to new_user_concert_path(profile.user), class: 'btn-sm btn-primary margin-left-sm' do %>
-    <i class="fa fa-plus"></i> Add new concert
+  <%= link_to new_user_concert_path(profile.user), class: 'btn-sm btn-success margin-left-sm' do %>
+    <i class="fa fa-plus"></i> Add
   <% end %>
 <% end %>
 
