ch18-bookmark-concert: completed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -126,3 +126,13 @@ img {
     height: 80px;
   }
 }
+.icon-empty {
+  color: #fff;
+  padding: 5px 10px;
+}
+.icon-empty:hover {
+  color: #fff;
+}
+.icon-full {
+  padding: 5px 10px;
+}
