--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,7 +7,8 @@
 <%= render partial: 'genres/list' %>
 
 <section id="all-tags">
-  <h2>All Tags</h2>
+  <h2><small><i class="fa fa-tag" aria-hidden="true"></i>
+</small> Tags</h2>
   <%= render partial: 'tags/list', locals: { tags: visibile_tags } %>
 </section>
 
