--- a/app/views/concerts/_search.html.erb
+++ b/app/views/concerts/_search.html.erb
@@ -2,7 +2,7 @@
 <script src="//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js"></script>
 
 <section id="nearby-concerts-search">
-  <h2>Nearby concerts</h2>
+  <h2><small><i class="fa fa-search" aria-hidden="true"></i></small> Nearby concerts</h2>
   <%= form_tag root_path, method: :get do %>
   <%= label_tag :search, nil, class: 'sr-only' %>
   <%= text_field_tag :search, params[:search], placeholder: 'Zip Code or City' %>
