--- a/app/views/favorites/_like.html.erb
+++ b/app/views/favorites/_like.html.erb
@@ -1,3 +1,3 @@
-<%= link_to [profile, Favorite.new], class: 'favorite-empty', method: :post, remote: true do %>
+<%= link_to [profile, Favorite.new], class: 'icon-empty', method: :post, remote: true do %>
   <i class="fa fa-heart-o" aria-hidden="true"></i> <%= profile.favorites.count %>
 <% end %>
