--- a/app/views/favorites/_undo.html.erb
+++ b/app/views/favorites/_undo.html.erb
@@ -1,3 +1,3 @@
-<%= link_to [profile, favorite], class: 'favorite-full', method: :delete, remote: true do %>
+<%= link_to [profile, favorite], class: 'icon-full', method: :delete, remote: true do %>
   <i class="fa fa-heart" aria-hidden="true"></i> <%= profile.favorites.count %>
 <% end %>
